--- a/diplom/MainWindow.xaml
+++ b/diplom/MainWindow.xaml
@@ -5,8 +5,38 @@
         xmlns:local="clr-namespace:diplom"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         Title="MainWindow"
-        Width="525"
-        Height="350"
+        Width="804.033"
+        Height="556.452"
         mc:Ignorable="d">
-    <Grid />
+    <Grid>
+        <TreeView Name="Tree_Categories" Margin="0,227,615,10">
+            <TreeViewItem Header="Природная вода">
+                <TreeViewItem Header="Снеговая" MouseDoubleClick="Tree_Categories_MouseDoubleClick" />
+                <TreeViewItem Header="Осадки" MouseDoubleClick="Tree_Categories_MouseDoubleClick" />
+                <TreeViewItem Header="Речная" MouseDoubleClick="Tree_Categories_MouseDoubleClick" />
+                <TreeViewItem Header="Стоячие водоемы" MouseDoubleClick="Tree_Categories_MouseDoubleClick" />
+                <TreeViewItem Header="Морская" MouseDoubleClick="Tree_Categories_MouseDoubleClick" />
+                <TreeViewItem Header="Океанская" MouseDoubleClick="Tree_Categories_MouseDoubleClick" />
+                <TreeViewItem Header="Минеральная" MouseDoubleClick="Tree_Categories_MouseDoubleClick" />
+                <TreeViewItem Header="Родниковая" MouseDoubleClick="Tree_Categories_MouseDoubleClick" />
+            </TreeViewItem>
+            <TreeViewItem Header="Сточная вода" MouseDoubleClick="Tree_Categories_MouseDoubleClick" />
+            <TreeViewItem Header="Питьевая вода">
+                <TreeViewItem Header="Водопровод">
+                    <TreeViewItem Header="Частный" MouseDoubleClick="Tree_Categories_MouseDoubleClick" />
+                    <TreeViewItem Header="Городской" MouseDoubleClick="Tree_Categories_MouseDoubleClick" />
+                </TreeViewItem>
+                <TreeViewItem Header="Колонка" MouseDoubleClick="Tree_Categories_MouseDoubleClick" />
+                <TreeViewItem Header="Колодец" MouseDoubleClick="Tree_Categories_MouseDoubleClick" />
+                <TreeViewItem Header="Родник" MouseDoubleClick="Tree_Categories_MouseDoubleClick" />
+            </TreeViewItem>
+        </TreeView>
+        <TextBox x:Name="textBox"
+                 Width="120"
+                 Height="23"
+                 Margin="544,199,0,0"
+                 HorizontalAlignment="Left"
+                 VerticalAlignment="Top"
+                 TextWrapping="Wrap" />
+    </Grid>
 </Window>
