--- a/diplom/MainWindow.xaml
+++ b/diplom/MainWindow.xaml
@@ -34,9 +34,21 @@
         <TextBox x:Name="textBox"
                  Width="120"
                  Height="23"
-                 Margin="544,199,0,0"
+                 Margin="61,117,0,0"
                  HorizontalAlignment="Left"
                  VerticalAlignment="Top"
                  TextWrapping="Wrap" />
+        <Menu x:Name="menu" HorizontalAlignment="Left" Height="23" VerticalAlignment="Top" Width="796">
+            <MenuItem Header="Фаил">
+            </MenuItem>
+        </Menu>
+        <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="391" Margin="200,124,0,0" VerticalAlignment="Top" Width="586">
+            <TabItem Header="Информация">
+                <Grid Background="#FFE5E5E5"/>
+            </TabItem>
+            <TabItem Header="Карта">
+                <Grid Background="#FFE5E5E5"/>
+            </TabItem>
+        </TabControl>
     </Grid>
 </Window>
