--- a/diplom/MainWindow.xaml
+++ b/diplom/MainWindow.xaml
@@ -5,11 +5,25 @@
         xmlns:local="clr-namespace:diplom"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         Title="MainWindow"
-        Width="804.033"
+        Width="799"
         Height="556.452"
-        mc:Ignorable="d">
-    <Grid>
-        <TreeView Name="Tree_Categories" Margin="0,227,615,10">
+        mc:Ignorable="d"
+        WindowState="Maximized">
+    <Grid Margin="0,0,-5,0">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="31*"/>
+
+        </Grid.RowDefinitions>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="196*"  />
+            <ColumnDefinition Width="289*" />
+            <ColumnDefinition Width="302*" />
+            <ColumnDefinition Width="6*"  />
+        </Grid.ColumnDefinitions>
+        <TreeView Name="Tree_Categories" Margin="10" Grid.Row="2"  >
             <TreeViewItem Header="Природная вода">
                 <TreeViewItem Header="Снеговая" MouseDoubleClick="Tree_Categories_MouseDoubleClick" />
                 <TreeViewItem Header="Осадки" MouseDoubleClick="Tree_Categories_MouseDoubleClick" />
@@ -32,23 +46,38 @@
             </TreeViewItem>
         </TreeView>
         <TextBox x:Name="textBox"
-                 Width="120"
-                 Height="23"
-                 Margin="61,117,0,0"
-                 HorizontalAlignment="Left"
-                 VerticalAlignment="Top"
-                 TextWrapping="Wrap" />
-        <Menu x:Name="menu" HorizontalAlignment="Left" Height="23" VerticalAlignment="Top" Width="796">
-            <MenuItem Header="Фаил">
+                 Margin="10,430,10,10"
+                 TextWrapping="Wrap" Grid.Row="2" />
+        <Menu x:Name="menu" Height="23" VerticalAlignment="Top" Grid.ColumnSpan="3" >
+            <MenuItem Header="Фаил" Grid.Row="1">
+                <MenuItem Header="Печать"/>
+                <MenuItem Header="Экспорт"/>
+                <MenuItem Header="Выход"/>
             </MenuItem>
+
+            <MenuItem Header="Измерение">
+                <MenuItem Header="Добавить измерение"/>
+            </MenuItem>
+
+            <MenuItem Header="Настройки">
+                <MenuItem Header="Настройка профиля"/>
+            </MenuItem>
+
         </Menu>
-        <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="391" Margin="200,124,0,0" VerticalAlignment="Top" Width="586">
-            <TabItem Header="Информация">
-                <Grid Background="#FFE5E5E5"/>
+
+        <TabControl x:Name="tabControl" Grid.Column="1"  Grid.Row="2" Grid.ColumnSpan="2" Margin="0,10,10,10">
+            <TabItem Header="TabItem">
+                <Grid Background="#FFE5E5E5" Margin="0,0,3,6">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="213*"/>
+                        <ColumnDefinition Width="358*"/>
+                    </Grid.ColumnDefinitions>
+                </Grid>
             </TabItem>
-            <TabItem Header="Карта">
-                <Grid Background="#FFE5E5E5"/>
+            <TabItem Header="TabItem">
+                <Grid Background="#FFE5E5E5" HorizontalAlignment="Left" Width="571" Height="391" VerticalAlignment="Top"/>
             </TabItem>
         </TabControl>
+
     </Grid>
 </Window>
