--- a/diplom/CreateProf.xaml
+++ b/diplom/CreateProf.xaml
@@ -19,10 +19,10 @@
                 <TranslateTransform/>
             </TransformGroup>
         </Grid.RenderTransform>
-        <Button x:Name="button" Content="Далее" HorizontalAlignment="Left" Margin="296,225,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
-        <Button x:Name="button1" Content="Отмена" HorizontalAlignment="Left" Margin="194,225,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="button" Content="Далее" HorizontalAlignment="Left" Margin="296,225,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2" Click="button_Click" IsDefault="True"/>
+        <Button x:Name="button1" Content="Отмена" HorizontalAlignment="Left" Margin="194,225,0,0" VerticalAlignment="Top" Width="75" Click="button1_Click"/>
         <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="251,22,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Grid.ColumnSpan="2"/>
-        <TextBox x:Name="textBox1" HorizontalAlignment="Left" Height="23" Margin="251,59,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Grid.ColumnSpan="2"/>
+        <TextBox x:Name="textBox1" HorizontalAlignment="Left" Height="23" Margin="251,59,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Grid.ColumnSpan="2" TextChanged="Ввод_кол_дачиков"/>
         <Label x:Name="label" Content="Введите название профиля" HorizontalAlignment="Left" Margin="10,22,0,0" VerticalAlignment="Top"/>
         <Label x:Name="label1" Content="Введите кол-во сенсоров" HorizontalAlignment="Left" Margin="10,59,0,0" VerticalAlignment="Top"/>
 
