--- a/diplom/CreateProf2.xaml
+++ b/diplom/CreateProf2.xaml
@@ -5,8 +5,31 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:diplom"
         mc:Ignorable="d"
-        Title="CreateProf2" Height="300" Width="300">
-    <Grid>
-        
+        Title="CreateProf2" Height="300" Width="420" Loaded="CreateProf2_load">
+    <Grid Name="rg" Margin="0,0,2,0">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="15"/>
+            <RowDefinition Height="24"/>
+            <RowDefinition Height="24"/>
+            <RowDefinition Height="24"/>
+            <RowDefinition Height="24"/>
+            <RowDefinition Height="24"/>
+            <RowDefinition Height="24"/>
+            <RowDefinition Height="24"/>
+            <RowDefinition Height="24"/>
+            <RowDefinition Height="24"/>
+            <RowDefinition Height="24"/>
+
+        </Grid.RowDefinitions>
+
+        <Grid.ColumnDefinitions >
+            <ColumnDefinition Name="rrr" Width="163" />
+            <ColumnDefinition Name="cd" Width="210" />
+            <ColumnDefinition Width="37" />
+        </Grid.ColumnDefinitions>
+
+        <StackPanel Name = "PanelBox"  Grid.Row="1"  Grid.RowSpan="10" Grid.Column="1" HorizontalAlignment="Right" Width="210"/>
+        <StackPanel Name = "PanelLabel"  Grid.Row="1"  Grid.RowSpan="10" Grid.Column="0"/>
+
     </Grid>
 </Window>
