--- a/diplom/SelectProf.xaml
+++ b/diplom/SelectProf.xaml
@@ -7,7 +7,9 @@
         mc:Ignorable="d"
         Title="Выбор профиля" Height="300" Width="300">
     <Grid>
-        <ComboBox x:Name="comboBox" HorizontalAlignment="Left" Margin="80,31,0,0" VerticalAlignment="Top" Width="120"/>
+        <ComboBox x:Name="comboBox" HorizontalAlignment="Left" Margin="95,41,0,0" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="label" Content="Выберите профиль" HorizontalAlignment="Left" Margin="95,10,0,0" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="button" Content="Далее" HorizontalAlignment="Left" Margin="192,225,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
 
     </Grid>
 </Window>
