--- a/diplom/SelectProf.xaml
+++ b/diplom/SelectProf.xaml
@@ -2,14 +2,32 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:diplom"
-        mc:Ignorable="d"
-        Title="Выбор профиля" Height="300" Width="300">
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        Title="Выбор профиля"
+        Width="385"
+        Height="367"
+        mc:Ignorable="d">
     <Grid>
-        <ComboBox x:Name="comboBox" HorizontalAlignment="Left" Margin="95,41,0,0" VerticalAlignment="Top" Width="120"/>
-        <Label x:Name="label" Content="Выберите профиль" HorizontalAlignment="Left" Margin="95,10,0,0" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="button" Content="Далее" HorizontalAlignment="Left" Margin="192,225,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
+        <ComboBox x:Name="comboBox"
+                  Margin="10,41,16,0"
+                  VerticalAlignment="Top"
+                  SelectionChanged="comboBox_SelectionChanged" />
+        <Label x:Name="label"
+               Width="120"
+               Margin="10,10,0,0"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Top"
+               Content="Выберите профиль" />
+        <Button x:Name="button"
+                Width="103"
+                Height="20"
+                Margin="0,0,10,10"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Bottom"
+                Click="button_Click"
+                Content="Далее" />
+        <DataGrid x:Name="dataGrid" Margin="10,68,16,35" />
 
     </Grid>
 </Window>
